--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ repositories {
 dependencies {
     // TODO-2-3
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    // TODO-5
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
